@@ -25,6 +25,12 @@ Version 8.35-RC1 xx-xxxx-201x
     characters, any three characters with fixed position can be searched.
     Search order: first, last, middle.
 
+6.  Improve character range checks in JIT. Characters are read by an inprecise
+    function now, which returns with an unknown value if the character code is
+    above a certain treshold (e.g: 256). The only limitation is that the value
+    must be bigger than the treshold as well. This function is useful, when
+    the characters above the treshold are handled in the same way.
+
 
 Version 8.34 15-December-2013
 -----------------------------
